# 2048-cli

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  old.py.py  pyproject.toml  test.py  teste.py
src/: board.py  game.py  main.py  menu.py  single_player.py  utils.py
src/ai_playing/: __init__.py  benchmark.py  montecarlo.py  multi_process.py
src/rust-montecarlo/: board.rs  lib.rs
src/rust-montecarlo/board/: algebrics.rs  mod.rs
