[package]
name = "rust-montecarlo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_montecarlo"
path = "src/rust-montecarlo/lib.rs" 
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "generate-import-lib"] }
rand = "0.8.5"
rayon = "1.6.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
