[tool.poetry]
name = "2048_cli"
version = "0.3.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
rich = "^12.5.1"
click = "^8.1.3"
maturin = "^0.14.7"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.4.5"
flake8 = "^5.0.4"
ruff = "^0.1.11"
isort = "^5.13.2"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
run = "python src/main.py"
format = "isort src && ruff format src"
