[tool.poetry]
name = "2048_cli"
version = "1.0.1"
description = "A small clone of 2048 for terminal, and also the implementation of an A.I. for it"
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"

[project]
name = "2048-cli"
version = "1.0.1"
description = "A small clone of 2048 for terminal, and also the implementation of an A.I. for it"
authors = [ {name = "gbPagano", email = "guilhermebpagano@gmail.com"} ]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "numpy >=1.23.3",
    "click >=8.1.3",
    "rich >=13.7.0",
    "rich-menu >=0.1.4",
    "maturin >=1.4.0",
]

[project.urls]
"Source Code" = "https://github.com/gbPagano/2048-cli"
Issues = "https://github.com/gbPagano/2048-cli/issues"

[tool.maturin]
module-name = "src.rust_montecarlo"

[project.scripts]
2048-cli = "src.main:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.7.0"
rich-menu = "^0.1.4"
maturin = "^1.4.0"
numpy = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.4.5"
flake8 = "^5.0.4"
ruff = "^0.1.11"
isort = "^5.13.2"
taskipy = "^1.12.2"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.taskipy.tasks]
run = "python src/main.py"
format = "isort src && ruff format src"
install = "maturin develop --release"
bench = "python src/ai_playing/benchmark.py"